--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,13 +1,19 @@
-<nav class="topbar topbar-sticky">
-  <div class="container">
-    <div class="topbar-left">
-      <a class="topbar-brand" href="/">
-        <img class="logo-default" src="./assets/images/logo.png" height="50" alt="logo">
-      </a>
-    </div>
-    <div class="topbar-right">
-      <a *ngIf="signInButtonVisible" class="btn btn-sm btn-primary mr-4" (click)="onLogedIn($event)" href="#">Sign in</a>
-      <a *ngIf="buttonVisible" class="btn btn-sm btn-outline btn-primary hidden-sm-down" href="#" (click)="onclick($event)">{{buttonText}}</a>
-    </div>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="/">NG Weather app</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" [routerLink]="['current']">Current Forecast <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" [routerLink]="['days']">5 Days Forecast</a>
+      </li>
+    </ul>
+
   </div>
 </nav>
