加入共用的forecasr-item

--- a/src/app/weathers/current-forecast/current-forecast.component.html
+++ b/src/app/weathers/current-forecast/current-forecast.component.html
@@ -1,9 +1,3 @@
-<ng-container *ngFor="let item of forecastData$ | async as list">
-  <nb-card accent="info">
-    <nb-card-header>{{item.city_name}}</nb-card-header>
-    <nb-card-body>
-      <img [src]="getImageUrl(item.weather.icon)">
-      {{item.temp}}
-    </nb-card-body>
-  </nb-card>
+<ng-container *ngFor="let forecast of forecastData$ | async">
+  <app-forecast-item [forecast]="forecast"></app-forecast-item>
 </ng-container>
