--- a/src/app/weathers/days-forecast/days-forecast.component.html
+++ b/src/app/weathers/days-forecast/days-forecast.component.html
@@ -1,3 +1,3 @@
-<p>
-  days-forecast works!
-</p>
+<ng-container *ngFor="let forecast of forecastData$ | async">
+  <app-forecast-item [forecast]="forecast"></app-forecast-item>
+</ng-container>
