--- a/src/app/weathers/forecast-item/forecast-item.component.html
+++ b/src/app/weathers/forecast-item/forecast-item.component.html
@@ -1,11 +1,39 @@
 <mat-card class="example-card">
   <mat-card-header>
+    <img mat-card-avatar [src]="getImageUrl(forecast.weather.icon)">
     <mat-card-title>{{forecast.city_name}}</mat-card-title>
   </mat-card-header>
-  <img mat-card-image [src]="getImageUrl(forecast.weather.icon)">
   <mat-card-content>
-    <p>
-      {{forecast.temp}}
-    </p>
+    <div class="row">
+      <div class="col-md-7">
+        {{forecast.temp}}
+      </div>
+      <div class="col-md-5">
+        <div class="row">
+          <div class="col-md-4">
+
+          </div>
+          <div class="col-md-8">
+
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-4">
+
+          </div>
+          <div class="col-md-8">
+
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-4">
+
+          </div>
+          <div class="col-md-8">
+
+          </div>
+        </div>
+      </div>
+    </div>
   </mat-card-content>
 </mat-card>
