調整UI，轉換物件為ForecastDatum

--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -1,7 +1,7 @@
 <div class="d-flex flex-column main">
   <app-header></app-header>
-  <main class="main-content">
+  <main class="container content">
     <router-outlet></router-outlet>
   </main>
-  <app-footer></app-footer>
+  <app-footer class="align-self-center"></app-footer>
 </div>
