--- a/src/app/layout/layout.component.scss
+++ b/src/app/layout/layout.component.scss
@@ -2,11 +2,11 @@
   min-height: 100%;
 }
 
-.main-content {
+.content {
   flex: 1;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
+  // display: flex;
+  // justify-content: center;
+  // flex-direction: column;
 }
 
 app-header,
