--- a/src/app/weathers/forecast-item/forecast-item.component.html
+++ b/src/app/weathers/forecast-item/forecast-item.component.html
@@ -1,12 +1,13 @@
 <mat-card class="example-card">
   <mat-card-header>
-    <img mat-card-avatar [src]="getImageUrl(forecast.weather.icon)">
-    <mat-card-title>{{forecast.city_name}}</mat-card-title>
+    <img mat-card-avatar [src]="getImageUrl(forecastDatum.weather.icon)">
+    <mat-card-title>{{forecastDatum.city_name}}</mat-card-title>
+    <mat-card-subtitle>{{forecastDatum.valid_date}}</mat-card-subtitle>
   </mat-card-header>
   <mat-card-content>
     <div class="row">
       <div class="col-md-7">
-        {{forecast.temp}}
+        {{forecastDatum.temp}}
       </div>
       <div class="col-md-5">
         <div class="row">
@@ -14,7 +15,7 @@
 
           </div>
           <div class="col-md-8">
-
+            {{forecastDatum.max_temp}}
           </div>
         </div>
         <div class="row">
@@ -22,7 +23,7 @@
 
           </div>
           <div class="col-md-8">
-
+            {{forecastDatum.min_temp}}
           </div>
         </div>
         <div class="row">
