--- a/src/app/weathers/forecast-item/forecast-item.component.html
+++ b/src/app/weathers/forecast-item/forecast-item.component.html
@@ -1,8 +1,8 @@
 <mat-card class="example-card">
   <mat-card-header>
     <img mat-card-avatar [src]="getImageUrl(forecastDatum.weather.icon)">
-    <mat-card-title>{{forecastDatum.city_name}}</mat-card-title>
-    <mat-card-subtitle>{{forecastDatum.valid_date}}</mat-card-subtitle>
+    <mat-card-title>{{forecastDatum.valid_date}}</mat-card-title>
+    <mat-card-subtitle>{{forecastDatum.city_name}}</mat-card-subtitle>
   </mat-card-header>
   <mat-card-content>
     <div class="row">
