--- a/src/app/weathers/forecast-item/forecast-item.component.html
+++ b/src/app/weathers/forecast-item/forecast-item.component.html
@@ -6,13 +6,13 @@
   </mat-card-header>
   <mat-card-content>
     <div class="row">
-      <div class="col-md-7">
-        {{forecastDatum.temp}}
+      <div class="col-md-7 temp">
+        {{forecastDatum.temp}}<sup>。</sup>
       </div>
       <div class="col-md-5">
         <div class="row">
           <div class="col-md-4">
-
+            <span>↑</span>
           </div>
           <div class="col-md-8">
             {{forecastDatum.max_temp}}
@@ -20,18 +20,10 @@
         </div>
         <div class="row">
           <div class="col-md-4">
-
+            <span>↓</span>
           </div>
           <div class="col-md-8">
             {{forecastDatum.min_temp}}
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-4">
-
-          </div>
-          <div class="col-md-8">
-
           </div>
         </div>
       </div>
