--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -8,10 +8,10 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" [routerLink]="['weathers', 'days']">5 Days Forecast</a>
+        <a class="nav-link" [routerLink]="['/weathers/days']">5 Days Forecast</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" [routerLink]="['weathers', 'location']">Location Forecast</a>
+        <a class="nav-link" [routerLink]="['/weathers/location']">Location Forecast</a>
       </li>
     </ul>
 
