--- a/src/app/weathers/location-forecast/location-forecast.component.html
+++ b/src/app/weathers/location-forecast/location-forecast.component.html
@@ -1,3 +1,18 @@
-<p>
-  location-forecast works!
-</p>
+<div class="row">
+  <div class="col-md-3">
+    <button mat-stroked-button color="primary" (click)="changeCity('tokyo')">Tokyo</button>
+  </div>
+  <div class="col-md-3">
+    <button mat-stroked-button color="primary" (click)="changeCity('tokyo')">Los Angelas</button></div>
+  <div class="col-md-3">
+    <button mat-stroked-button color="primary" (click)="changeCity('tokyo')">New York</button>
+  </div>
+  <div class="col-md-3">
+    <button mat-stroked-button color="primary" (click)="changeCity('tokyo')">Syney</button>
+  </div>
+</div>
+<div class="row">
+  <div class="col-md-3" *ngFor="let data of forecastData$ | async">
+    <app-forecast-item [forecastDatum]="data"></app-forecast-item>
+  </div>
+</div>
