加上選擇城市的功能

--- a/src/app/weathers/location-forecast/location-forecast.component.html
+++ b/src/app/weathers/location-forecast/location-forecast.component.html
@@ -1,18 +1,18 @@
-<div class="row">
+<div class="row mb-3">
   <div class="col-md-3">
-    <button mat-stroked-button color="primary" (click)="changeCity('tokyo')">Tokyo</button>
+    <button mat-stroked-button color="primary" (click)="changeCity('Tokyo')">Tokyo</button>
   </div>
   <div class="col-md-3">
-    <button mat-stroked-button color="primary" (click)="changeCity('tokyo')">Los Angelas</button></div>
+    <button mat-stroked-button color="primary" (click)="changeCity('Los Angeles')">Los Angeles</button></div>
   <div class="col-md-3">
-    <button mat-stroked-button color="primary" (click)="changeCity('tokyo')">New York</button>
+    <button mat-stroked-button color="primary" (click)="changeCity('New York')">New York</button>
   </div>
   <div class="col-md-3">
-    <button mat-stroked-button color="primary" (click)="changeCity('tokyo')">Syney</button>
+    <button mat-stroked-button color="primary" (click)="changeCity('Sydney')">Sydney</button>
   </div>
 </div>
 <div class="row">
-  <div class="col-md-3" *ngFor="let data of forecastData$ | async">
+  <div class="col-md-3 mb-3" *ngFor="let data of forecastData$ | async">
     <app-forecast-item [forecastDatum]="data"></app-forecast-item>
   </div>
 </div>
