調整color及數量

--- a/src/app/weathers/forecast-item/forecast-item.component.html
+++ b/src/app/weathers/forecast-item/forecast-item.component.html
@@ -11,19 +11,13 @@
       </div>
       <div class="col-md-5">
         <div class="row">
-          <div class="col-md-4">
-            <span>↑</span>
-          </div>
-          <div class="col-md-8">
-            {{forecastDatum.max_temp}}
+          <div class="col-md-12">
+            <span class="up mr-1">↑</span><span class="up">{{forecastDatum.max_temp}}</span>
           </div>
         </div>
         <div class="row">
-          <div class="col-md-4">
-            <span>↓</span>
-          </div>
-          <div class="col-md-8">
-            {{forecastDatum.min_temp}}
+          <div class="col-md-12">
+            <span class="down mr-1">↓</span><span class="down">{{forecastDatum.min_temp}}</span>
           </div>
         </div>
       </div>
