--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,19 +1,25 @@
 <nav class="navbar navbar-expand-lg navbar-light">
   <a class="navbar-brand" href="/">NG Weather app</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+  <button
+    class="navbar-toggler"
+    type="button"
+    data-toggle="collapse"
+    data-target="#navbarSupportedContent"
+    aria-controls="navbarSupportedContent"
+    aria-expanded="false"
+    aria-label="Toggle navigation"
+  >
     <span class="navbar-toggler-icon"></span>
   </button>
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" [routerLink]="['/weathers/days']">8 Days Forecast</a>
+        <a class="nav-link" [routerLink]="['/days']">8 Days Forecast</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" [routerLink]="['/weathers/location']">Location Forecast</a>
+        <a class="nav-link" [routerLink]="['/locations']">Location Forecast</a>
       </li>
     </ul>
-
   </div>
 </nav>
