--- a/src/app/weathers/days-forecast/days-forecast.component.html
+++ b/src/app/weathers/days-forecast/days-forecast.component.html
@@ -1,10 +1,10 @@
-<div class="lodingContainer" *ngIf="(loading$ | async); else: item">
+<div class="lodingContainer" *ngIf="loading; else item">
   <mat-spinner></mat-spinner>
 </div>
 
 <ng-template #item>
   <div class="row">
-    <div class="col-md-3 mb-3" *ngFor="let data of (forecastData$ | async)">
+    <div class="col-md-3 mb-3" *ngFor="let data of forecastData$ | async">
       <app-forecast-item [forecastDatum]="data"></app-forecast-item>
     </div>
   </div>
