--- a/src/app/weathers/forecast-item/forecast-item.component.html
+++ b/src/app/weathers/forecast-item/forecast-item.component.html
@@ -1,23 +1,21 @@
 <mat-card class="example-card">
   <mat-card-header>
-    <img mat-card-avatar [src]="getImageUrl(forecastDatum.weather.icon)">
-    <mat-card-title>{{forecastDatum.valid_date}}</mat-card-title>
-    <mat-card-subtitle>{{forecastDatum.city_name}}</mat-card-subtitle>
+    <img mat-card-avatar [src]="getImageUrl(forecastDatum.weather.icon)" />
+    <mat-card-title>{{ forecastDatum.valid_date }}</mat-card-title>
+    <mat-card-subtitle>{{ forecastDatum.city_name }}</mat-card-subtitle>
   </mat-card-header>
   <mat-card-content>
     <div class="row">
-      <div class="col-md-7 temp">
-        {{forecastDatum.temp}}<sup>。</sup>
-      </div>
+      <div class="col-md-7 temp">{{ forecastDatum.temp }}<sup>。</sup></div>
       <div class="col-md-5">
         <div class="row">
           <div class="col-md-12">
-            <span class="up mr-1">↑</span><span class="up">{{forecastDatum.max_temp}}</span>
+            <span class="up mr-1">↑</span><span class="up">{{ forecastDatum.max_temp }}</span>
           </div>
         </div>
         <div class="row">
           <div class="col-md-12">
-            <span class="down mr-1">↓</span><span class="down">{{forecastDatum.min_temp}}</span>
+            <span class="down mr-1">↓</span><span class="down">{{ forecastDatum.min_temp }}</span>
           </div>
         </div>
       </div>
