--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,25 +1,25 @@
-<nav class="navbar navbar-expand-lg navbar-light">
-  <a class="navbar-brand" href="/">NG Weather app</a>
-  <button
-    class="navbar-toggler"
-    type="button"
-    data-toggle="collapse"
-    data-target="#navbarSupportedContent"
-    aria-controls="navbarSupportedContent"
-    aria-expanded="false"
-    aria-label="Toggle navigation"
-  >
-    <span class="navbar-toggler-icon"></span>
-  </button>
-
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" [routerLink]="['/days']">8 Days Forecast</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" [routerLink]="['/locations']">Location Forecast</a>
-      </li>
-    </ul>
+<nav class="navbar">
+  <div class="container">
+    <div class="navbar-brand">
+      <a class="navbar-item" [routerLink]="['/']"> NG Weather app </a>
+      <span class="navbar-burger burger" data-target="navbarMenu">
+        <span></span>
+        <span></span>
+        <span></span>
+      </span>
+    </div>
+    <div id="navbarMenu" class="navbar-menu">
+      <div class="navbar-end">
+        <div class="navbar-item">
+          <div class="control has-icons-left"></div>
+        </div>
+        <a class="navbar-item is-size-5 has-text-weight-semibold" [routerLink]="['/days']">
+          8 Days Forecast
+        </a>
+        <a class="navbar-item is-size-5 has-text-weight-semibold" [routerLink]="['/locations']">
+          Location Forecast
+        </a>
+      </div>
+    </div>
   </div>
 </nav>
