--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -1,7 +1,7 @@
-<div class="d-flex flex-column main">
+<div class="is-flex is-flex-direction-column main">
   <app-header></app-header>
-  <main class="container content">
+  <main class="container">
     <router-outlet></router-outlet>
   </main>
-  <app-footer class="align-self-center"></app-footer>
+  <app-footer class="is-align-self-center"></app-footer>
 </div>
