--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,3 +1,8 @@
-<footer class="site-footer">
-  Powered by <a href="https://angular.io/">Angular</a> & <a href="https://www.weatherbit.io/">weatherbit</a>
+<footer class="footer">
+  <div class="content has-text-centered">
+    <p>
+      <strong>NG Weather</strong> by <a href="https://github.com/thomascsd">Thomas</a>.
+      Powered by <a href="https://angular.io/">Angular</a> & <a href="https://www.weatherbit.io/">weatherbit</a>.
+    </p>
+  </div>
 </footer>
