--- a/src/app/weathers/location-forecast/location-forecast.component.html
+++ b/src/app/weathers/location-forecast/location-forecast.component.html
@@ -1,18 +1,12 @@
-<div class="columns mb-3">
-  <div class="column">
-    <button mat-stroked-button color="primary" (click)="changeCity('Tokyo')">Tokyo</button>
-  </div>
-  <div class="column">
-    <button mat-stroked-button color="primary" (click)="changeCity('Los Angeles')">
-      Los Angeles
-    </button>
-  </div>
-  <div class="column">
-    <button mat-stroked-button color="primary" (click)="changeCity('New York')">New York</button>
-  </div>
-  <div class="column">
-    <button mat-stroked-button color="primary" (click)="changeCity('Sydney')">Sydney</button>
-  </div>
+<div class="buttons is-centered mb-5">
+  <button class="button is-rounded is-info is-light" (click)="changeCity('Tokyo')">Tokyo</button>
+  <button class="button is-rounded is-info is-light" (click)="changeCity('Los Angeles')">
+    Los Angeles
+  </button>
+  <button class="button is-rounded is-info is-light" (click)="changeCity('New York')">
+    New York
+  </button>
+  <button class="button is-rounded is-info is-light" (click)="changeCity('Sydney')">Sydney</button>
 </div>
 
 <div class="columns">
