--- a/src/app/weathers/days-forecast/days-forecast.component.html
+++ b/src/app/weathers/days-forecast/days-forecast.component.html
@@ -1,13 +1,13 @@
-@defer {
+@if (forecastData.isLoading()) {
+  <div class="lodingContainer">
+    <mat-spinner></mat-spinner>
+  </div>
+} @else {
   <div class="columns is-multiline">
-    @for (data of forecastData$ | async; track data.country_code) {
+    @for (data of forecastData.value(); track data.country_code) {
       <div class="column is-one-quarter">
         <app-forecast-item [forecastDatum]="data"></app-forecast-item>
       </div>
     }
-  </div>
-} @placeholder (minimum 50ms) {
-  <div class="lodingContainer">
-    <mat-spinner></mat-spinner>
   </div>
 }
